[tool.poetry]
name = "numiner"
version = "0.2.1"
description = "NUM Miner (Tool to create open dataset for Handwritten Text Recognition)"
authors = ["Khasbilegt.TS <khasbilegt.ts@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/khasbilegt/numiner/"
keywords = ["htr", "hwr", "data", "dataset", "image", "tool"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.2.0"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
coveralls = "^2.0.0"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
bandit = "^1.6.2"

[tool.poetry.scripts]
numiner = "numiner.__main__:main"
version = "numiner.__main__:get_version"

[tool.black]
line-length = 100
target_version = ['py38']
include = '\.py$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

